--- a/midterm/about.html
+++ b/midterm/about.html
@@ -15,17 +15,9 @@
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
             <ul>
-                <li>
-                    <div><a href="index.html">HOME</a></div>
-                </li>
-                <li>
-                    <div><a href="about.html">ABOUT</a>
-                </li>
-                </div>
-                <li>
-                    <div><a href="contact.html">CONTACT</a>
-                </li>
-                </div>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a> </li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -169,27 +161,27 @@
                 </div>
             </div>
         </div>
-        <div>
-            <div class="sponsors">
-                <h2>Special thank you to the following</h2>
-                    <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-                    <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png"
-                        alt="ac logo-image">
-                    <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
-                    <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
-            </div>
-            <footer id="footer-container">
-                <div class="footer">
-                    <h4>Follow Us</h4>
-                    <div class="socialmedia-icon">
-                        <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
-                        <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
-                        <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
-                        <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                        <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
-                    </div>
+        <div class="sponsors">
+            <h2>Special thank you to the following</h2>
+            <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png"
+                alt="ac logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
+        </div>
+        <footer id="footer-container">
+            <div class="footer">
+                <h4>Follow Us</h4>
+                <div class="socialmedia-icon">
+                    <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
+                    <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
+                    <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
+                    <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
+                    <img class="arrow" src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
                 </div>
-            </footer>
+            </div>
+        </footer>
+        </footer>
     </main>
 </body>
 
