--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Midterm</title>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="contact.css">
 </head>
 
@@ -17,17 +17,9 @@
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
             <ul>
-                <li>
-                    <div><a href="index.html">HOME</a></div>
-                </li>
-                <li>
-                    <div><a href="about.html">ABOUT</a>
-                </li>
-                </div>
-                <li>
-                    <div><a href="contact.html">CONTACT</a>
-                </li>
-                </div>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a> </li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -92,7 +84,7 @@
                     <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
                     <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
                     <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                    <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                    <img class="arrow" src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
                 </div>
             </div>
         </footer>
