--- a/midterm/index.html
+++ b/midterm/index.html
@@ -22,17 +22,9 @@
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav class="topnav">
             <ul>
-                <li>
-                    <div><a href="index.html">HOME</a></div>
-                </li>
-                <li>
-                    <div><a href="about.html">ABOUT</a>
-                </li>
-                </div>
-                <li>
-                    <div><a href="contact.html">CONTACT</a>
-                </li>
-                </div>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a> </li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -99,7 +91,7 @@
             </div>
         </div>
         <div class="br">
-            <div id="w">
+            <div class="w">
                 <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
             </div>
             <div id="f">
