--- a/Finals/about.html
+++ b/Finals/about.html
@@ -11,10 +11,10 @@
 
 <body>
     <!-- Site header  -->
-    <header>
-        <nav>
+    <header class="header">
+        <nav id="nav">
             <ul>
-                <li><a href="index.html">HOME</a> </li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a> </li>
                 <li><a href="portfilio.html">PORTFILIO</a></li>
                 <li><a href="service.html">SERVICE</a></li>
@@ -29,7 +29,7 @@
             vel!</p>
 
         <footer>
-
+            <p>@copyright of Fetomi</p>
         </footer>
     </main>
 </body>
