--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -11,8 +11,8 @@
 
 <body>
     <!-- Site header  -->
-    <header>
-        <nav>
+    <header class="header">
+        <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a> </li>
@@ -30,7 +30,7 @@
             videography please just list your target audience and what tpe of video your try to create and last but not
             least for photography just come in or hire me for an event depending on what you want.
         </p>
-        <form>
+        <form id="hire-me">
             <h2>Hire Me.</h2>
             <div class="name">
                 <label for="Fullname"></label>
@@ -44,13 +44,20 @@
                 <label for="Email"></label>
                 <input placeholder="Email" type="Email" id="Email">
             </div>
-            <div>
+            <div class="name">
                 <label for="time"></label>
                 <input placeholder="time" type="time">
             </div>
             <div class="name">
                 <label for="Message"></label>
-                <textarea id="Message" name="Feedback" placeholder="Details..."></textarea>
+                <textarea id="Details" name="Feedback" placeholder="Details..."></textarea>
+                <button class="button">Submit</button>
             </div>
-            <button class="button" type="button">Submit</button>
         </form>
+        <footer>
+            <p>@copyright of Fetomi</p>
+        </footer>
+    </main>
+</body>
+
+</html>
