--- a/Finals/index.html
+++ b/Finals/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Site header  -->
-    <header>
-        <nav>
+    <header class="header">
+        <img class="logo" src="./images/Logo.png" alt="my logo">
+        <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a> </li>
@@ -21,13 +22,16 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        </div>
+        </div>
     </header>
     <main>
         <h1>Hello I'm</h1>
         <h2>Prinye Wilcox</h2>
+        <img class="me" src="./images/me.JPG" alt="an image of me">
         <p>A freelancer for web development, photography and videography</p>
-        <button>Hire Me</button>
-        <button>My work</button>
+        <button class="hire">Hire Me</button>
+        <button class="work">My work</button>
     </main>
 </body>
 
