--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Site header  -->
-    <header>
-        <nav>
+    <header class="header">
+        <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a> </li>
@@ -24,3 +24,13 @@
     </header>
     <main>
         <h1>Portfilio</h1>
+        <div id="port">
+
+        </div>
+        <footer>
+            <p>@copyright of Fetomi</p>
+        </footer>
+    </main>
+</body>
+
+</html>
