--- a/Finals/service.html
+++ b/Finals/service.html
@@ -11,8 +11,8 @@
 
 <body>
     <!-- Site header  -->
-    <header>
-        <nav>
+    <header class="header">
+        <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a> </li>
