using one css stylesheet

--- a/Finals/about.html
+++ b/Finals/about.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="about">
     <!-- Site header  -->
     <header class="header">
+        <img class="logo" src="./images/Logo.png" alt="my logo">
         <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,15 +23,22 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        </div>
+        </div>
     </header>
     <main>
-        <h1>ABOUT</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, earum. Repudiandae voluptate maxime eaque,
-            possimus debitis eius quis, similique laudantium molestias libero molestiae a dolores nulla at quasi, ipsam
-            vel!</p>
-
+        <header class="banner">
+            <h2>ABOUT</h2>
+        </header>
+        <p></p>Hey,I'm an undergraduate that just finished learning from algonquin college. I studied under the IMD
+        deparment which I was able learn some basic graphic design, coding, wordpress etc. I'm a 19 year old indiviual
+        that's a advance learning and working experiance with coding, photography and videography
         <footer>
             <p>@copyright of Fetomi</p>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube-square"></i>
+            <i class="fab fa-instagram-square"></i>
         </footer>
     </main>
 </body>
