--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="contact">
     <!-- Site header  -->
     <header class="header">
+        <img class="logo" src="./images/Logo.png" alt="my logo">
         <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,9 +22,11 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        </div>
+        </div>
     </header>
     <main>
-        <h1>Hire Me</h1>
+        <h2>Hire Me</h2>
         <h1>Note</h1>
         <p>In the details box,please fill out all the necessery details I need depending on the service you
             choiced.If web development please I nedd a required mockup of the website you want me to create, if
@@ -56,6 +59,10 @@
         </form>
         <footer>
             <p>@copyright of Fetomi</p>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube-square"></i>
+            <i class="fab fa-instagram-square"></i>
         </footer>
     </main>
 </body>
