--- a/Finals/index.html
+++ b/Finals/index.html
@@ -26,12 +26,19 @@
         </div>
     </header>
     <main>
-        <h1>Hello I'm</h1>
-        <h2>Prinye Wilcox</h2>
-        <img class="me" src="./images/me.JPG" alt="an image of me">
-        <p>A freelancer for web development, photography and videography</p>
-        <button class="hire">Hire Me</button>
-        <button class="work">My work</button>
+        <div class="container">
+            <div>
+                <h1>Hello I'm</h1>
+                <h2>Prinye Wilcox</h2>
+                <p>A freelancer for web development, photography and videography</p>
+                <button class="hire">Hire Me</button>
+                <button class="work">My work</button>
+            </div>
+            <div>
+                <img class="me" src="./images/me.JPG" alt="an image of me">
+            </div>
+        </div>
+
     </main>
 </body>
 
