--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="portfilio">
     <!-- Site header  -->
     <header class="header">
+        <img class="logo" src="./images/Logo.png" alt="my logo">
         <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,15 +22,26 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        </div>
+        </div>
     </header>
     <main>
-        <h1>Portfilio</h1>
-        <div id="port">
-
-        </div>
-        <footer>
-            <p>@copyright of Fetomi</p>
-        </footer>
+        <h2>Portfilio</2>
+            <div id="port">
+                <img src="./images/portfilio8.JPG" alt="portfilio">
+                <img src="./images/portfilio6.JPG" alt="portfilio">
+                <img src="./images/portfilio9.JPG" alt="portfilio">
+                <img src="./images/portfilio.png" alt="portfilio">
+                <img src="./images/portfilio2.png" alt="portfilio">
+                <img src="./images/portfilio4.png" alt="portfilio">
+            </div>
+            <footer>
+                <p>@copyright of Fetomi</p>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-youtube-square"></i>
+                <i class="fab fa-instagram-square"></i>
+            </footer>
     </main>
 </body>
 
