--- a/Finals/service.html
+++ b/Finals/service.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Site header  -->
     <header class="header">
+        <img class="logo" src="./images/Logo.png" alt="my logo">
         <nav id="nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -21,6 +22,31 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
+        </div>
+        </div>
     </header>
     <main>
-        <h1>SERVICE</h1>
+        <h2>SERVICE</h2>
+        <div>
+            <img src="./images/WEB-development.jpeg" alt="web">
+            <button>Web-development</button>
+        </div>
+        <div>
+            <img src="./images/Photography.JPG" alt="Photo">
+            <button>Photography</button>
+        </div>
+        <div>
+            <img src="./images/videography.jpg" alt="videography">
+            <button>videography</button>
+        </div>
+        <footer>
+            <p>@copyright of Fetomi</p>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube-square"></i>
+            <i class="fab fa-instagram-square"></i>
+        </footer>
+    </main>
+</body>
+
+</html>
