--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -15,20 +15,91 @@
 
 <body>
     <div class="container">
-        <header class="text-center bg-success">
-            <h1 class="display-1 text-white">Hello, world!</h1>
-            <p class="h4 fst-italic text-grey fw-bold">Welcome to my page</p>
-        </header>
-        <img class="img-fluid img-thumbnail mx-auto d-block rounded-circle" src="https://via.placeholder.com/250"
-            alt="placeholder">
-        <button class="btn btn-danger text-white">My Work</button>
-        <button class=" btn btn-outline-primary btn-lg">hello</button>
-        <div class="alert alert-warning">
-            <p class="h4 text-center">Be sure to say goodbye</p>
+        <div class="row">
+            <div class="col">
+                <p>1.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error ex aspernatur enim
+                    consequuntur
+                    nisi ipsum, laboriosam illum, eligendi architecto aliquid odit iure dolore totam iusto cupiditate
+                    quaerat sint omnis.</p>
+            </div>
+            <div class="col">
+                <p>2.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati necessitatibus autem quia,
+                    quod, dolores deleniti tempora laborum accusamus a quaerat natus fugit molestias tenetur
+                    distinctio at similique officia temporibus dignissimos. </p>
+            </div>
+            <div class="col">
+                <p>3.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias accusamus perspiciatis ratione ex
+                    suscipit neque cum illum libero maiores velit eos cumque reprehenderit, veniam reiciendis dolorem
+                    dignissimos? Dolorem, ex qui?</p>
+            </div>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-8">
+                <p>A)Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ratione dignissimos
+                    perspiciatis.
+                    Maiores deserunt quo, inventore culpa officiis esse possimus aspernatur labore enim velit? Quidem
+                    illum
+                    commodi ipsam facilis soluta.</p>
+            </div>
+            <div class="col-4">
+                <p>B}Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe ducimus, quaerat sed ex
+                    quisquam
+                    quos officia exercitationem, perferendis repellendus facilis cupiditate soluta fugiat, iusto eaque
+                    quasi. Cum, assumenda qui?</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-4 col-lg-8">
+                <p>4.Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt earum blanditiis provident
+                    adipisci!
+                    Amet sunt, voluptatem impedit recusandae, corporis libero nobis labore alias fugit ratione, eligendi
+                    dolorum eos mollitia nisi!</p>
+            </div>
+            <div class="col-md-8 col-lg-4">
+                <p>5.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus animi mollitia, cum, dicta
+                    quasi
+                    blanditiis cupiditate corrupti nulla est, excepturi repudiandae veniam iste odio soluta illum.
+                    Laboriosam suscipit mollitia natus.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-5 col-md-8 col-xl-3">
+                <p>7.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde enim consequatur sit, autem animi
+                    quae
+                    dicta doloribus fuga illum nesciunt blanditiis commodi facere esse hic debitis reiciendis ab nihil
+                    repudiandae?</p>
+            </div>
+            <div class="col-sm-7 col-md-4 col-xl-9">
+                <p>8.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque consequatur molestias porro. Aliquam
+                    laboriosam, rem officia, dicta incidunt mollitia, iste eveniet quasi exercitationem vitae ea
+                    cupiditate?
+                    Ad modi quis dolores.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="col-md-5 offset-7">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis debitis nostrum repellat possimus, minima
+                quod error illum sit ducimus adipisci voluptatem fuga itaque eligendi molestiae unde ipsa accusantium
+                laudantium iusto!</p>
+        </div>
+        <section class="bg-info ac-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nesciunt consectetur sequi,
+                            quis
+                            veniam
+                            non pariatur quo consequatur voluptate expedita. Adipisci magni officia iusto ex dolore
+                            aliquam
+                            provident assumenda voluptates?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-
-
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -36,12 +107,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
