finishing layout for mobile

--- a/Finals/about.html
+++ b/Finals/about.html
@@ -23,22 +23,24 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        </div>
-        </div>
     </header>
     <main>
         <header class="banner">
             <h2>ABOUT</h2>
         </header>
-        <p></p>Hey,I'm an undergraduate that just finished learning from algonquin college. I studied under the IMD
-        deparment which I was able learn some basic graphic design, coding, wordpress etc. I'm a 19 year old indiviual
-        that's a advance learning and working experiance with coding, photography and videography
+        <p>Hey,I'm an undergraduate that just finished learning from algonquin college. I studied under the IMD
+            deparment which I was able learn some basic graphic design, coding, wordpress etc. I'm a 19 year old
+            indiviual
+            that's a advance learning and working experiance with coding, photography and videography
+        </p>
         <footer>
-            <p>@copyright of Fetomi</p>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-youtube-square"></i>
-            <i class="fab fa-instagram-square"></i>
+            <div class="foot">
+                <p>@copyright of Fetomi</p>
+                <i id="socials" class="fab fa-twitter-square"></i>
+                <i id="socials" class="fab fa-facebook-square"></i>
+                <i id="socials" class="fab fa-youtube-square"></i>
+                <i id="socials" class="fab fa-instagram-square"></i>
+            </div>
         </footer>
     </main>
 </body>
