--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body class="contact">
     <!-- Site header  -->
@@ -22,8 +24,6 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        </div>
-        </div>
     </header>
     <main>
         <h2>Hire Me</h2>
@@ -58,11 +58,13 @@
             </div>
         </form>
         <footer>
-            <p>@copyright of Fetomi</p>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-youtube-square"></i>
-            <i class="fab fa-instagram-square"></i>
+            <div class="foot">
+                <p>@copyright of Fetomi</p>
+                <i id="socials" class="fab fa-twitter-square"></i>
+                <i id="socials" class="fab fa-facebook-square"></i>
+                <i id="socials" class="fab fa-youtube-square"></i>
+                <i id="socials" class="fab fa-instagram-square"></i>
+            </div>
         </footer>
     </main>
 </body>
