--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body class="portfilio">
     <!-- Site header  -->
@@ -22,25 +24,24 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        </div>
-        </div>
     </header>
     <main>
-        <h2>Portfilio</2>
-            <div id="port">
-                <img src="./images/portfilio8.JPG" alt="portfilio">
-                <img src="./images/portfilio6.JPG" alt="portfilio">
-                <img src="./images/portfilio9.JPG" alt="portfilio">
-                <img src="./images/portfilio.png" alt="portfilio">
-                <img src="./images/portfilio2.png" alt="portfilio">
-                <img src="./images/portfilio4.png" alt="portfilio">
-            </div>
+        <h2>Portfilio</h2>
+            <p>Here are some of my work that were done for some of my clients</p>
+                <img class="portfilo" src="./images/portfilio8.JPG" alt="portfilio">
+                <img class="portfilo" src="./images/portfilio6.JPG" alt="portfilio">
+                <img class="portfilo" src="./images/portfilio9.JPG" alt="portfilio">
+                <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
+                <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
+                <img class="portfilo" src="./images/portfilio4.png" alt="portfilio">
             <footer>
-                <p>@copyright of Fetomi</p>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-youtube-square"></i>
-                <i class="fab fa-instagram-square"></i>
+                <div class="foot">
+                    <p>@copyright of Fetomi</p>
+                    <i id="socials" class="fab fa-twitter-square"></i>
+                    <i id="socials" class="fab fa-facebook-square"></i>
+                    <i id="socials" class="fab fa-youtube-square"></i>
+                    <i id="socials" class="fab fa-instagram-square"></i>
+                </div>
             </footer>
     </main>
 </body>
