--- a/Finals/service.html
+++ b/Finals/service.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Finals</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,23 +29,27 @@
     <main>
         <h2>SERVICE</h2>
         <div>
-            <img src="./images/WEB-development.jpeg" alt="web">
-            <button>Web-development</button>
-        </div>
-        <div>
-            <img src="./images/Photography.JPG" alt="Photo">
-            <button>Photography</button>
-        </div>
-        <div>
-            <img src="./images/videography.jpg" alt="videography">
-            <button>videography</button>
+            <div>
+              <img src="./images/WEB-development.jpeg" alt=" a laptop" class="service">
+                <button>Web-development</button>
+            </div>
+            <div>
+                <img src="./images/Photography.JPG" alt="a photo" class="service">
+                <button>Photography</button>
+            </div>
+            <div>
+                <img src="./images/videography.jpg" alt="a camera" class="service">
+                <button>videography</button>
+            </div>
         </div>
         <footer>
-            <p>@copyright of Fetomi</p>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-youtube-square"></i>
-            <i class="fab fa-instagram-square"></i>
+            <div class="foot">
+                <p>@copyright of Fetomi</p>
+                <i id="socials" class="fab fa-twitter-square"></i>
+                <i id="socials" class="fab fa-facebook-square"></i>
+                <i id="socials" class="fab fa-youtube-square"></i>
+                <i id="socials" class="fab fa-instagram-square"></i>
+            </div>
         </footer>
     </main>
 </body>
