finishing the layout for mobile

--- a/Finals/contact.html
+++ b/Finals/contact.html
@@ -26,7 +26,11 @@
         </nav>
     </header>
     <main>
-        <h2>Hire Me</h2>
+        <header class="banner">
+            <div class="banner-text">
+                <h2>Hire Me</h2>
+            </div>
+        </header>
         <h1>Note</h1>
         <p>In the details box,please fill out all the necessery details I need depending on the service you
             choiced.If web development please I nedd a required mockup of the website you want me to create, if
