--- a/Finals/index.html
+++ b/Finals/index.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div>
+        <div class="landingpage">
+            <div class="container-text">
                 <h1>Hello I'm</h1>
                 <h2>Prinye Wilcox</h2>
                 <p>A freelancer for web development, photography and videography</p>
