--- a/Finals/portfilio.html
+++ b/Finals/portfilio.html
@@ -26,23 +26,48 @@
         </nav>
     </header>
     <main>
-        <h2>Portfilio</h2>
-            <p>Here are some of my work that were done for some of my clients</p>
+        <header class="banner">
+            <div class="banner-text">
+                <h2>Portfilio</h2>
+            </div>
+        </header>
+        <p>Here are some of my work that were done for some of my clients</p>
+        <div>
+            <div class="portfolio-card">
+                <h3>Photography</h3>
                 <img class="portfilo" src="./images/portfilio8.JPG" alt="portfilio">
+            </div>
+            <div class="portfolio-card">
+                <h3>Photography</h3>
                 <img class="portfilo" src="./images/portfilio6.JPG" alt="portfilio">
+            </div>
+            <div class="portfolio-card">
+                <h3>Photography</h3>
                 <img class="portfilo" src="./images/portfilio9.JPG" alt="portfilio">
-                <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
+            </div>
+            <div class="portfolio-card">
+                <h3>Web-development</h3>
                 <img class="portfilo" src="./images/portfilio2.png" alt="portfilio">
+            </div>
+            <div class="portfolio-card">
+                <h3>Web-development</h3>
+                <img class="portfilo" src="./images/portfilio.png" alt="portfilio">
+            </div>
+            <div class="portfolio-card">
+                <h3>Web-development</h3>
                 <img class="portfilo" src="./images/portfilio4.png" alt="portfilio">
-            <footer>
-                <div class="foot">
-                    <p>@copyright of Fetomi</p>
-                    <i id="socials" class="fab fa-twitter-square"></i>
-                    <i id="socials" class="fab fa-facebook-square"></i>
-                    <i id="socials" class="fab fa-youtube-square"></i>
-                    <i id="socials" class="fab fa-instagram-square"></i>
-                </div>
-            </footer>
+            </div>
+        </div>
+
+        <footer>
+            <div class="foot">
+                <p>@copyright of Fetomi</p>
+                <i id="socials" class="fab fa-twitter-square"></i>
+                <i id="socials" class="fab fa-facebook-square"></i>
+                <i id="socials" class="fab fa-youtube-square"></i>
+                <i id="socials" class="fab fa-instagram-square"></i>
+            </div>
+        </footer>
     </main>
 </body>
 
