--- a/Finals/service.html
+++ b/Finals/service.html
@@ -27,20 +27,41 @@
         </div>
     </header>
     <main>
-        <h2>SERVICE</h2>
-        <div>
-            <div>
-              <img src="./images/WEB-development.jpeg" alt=" a laptop" class="service">
-                <button>Web-development</button>
+        <header class="banner">
+            <div class="banner-text">
+                <h2>Service</h2>
+            </div>
+        </header>
+        <div class="card-wrap">
+            <div class="card">
+                <div>
+                    <img src="./images/WEB-development.jpeg" alt=" a laptop" class="service">
+                    <div class="card-container">
+                        <h3>Web-development</h3>
+                        <button>Learn more</button>
+                    </div>
+                </div>
             </div>
             <div>
-                <img src="./images/Photography.JPG" alt="a photo" class="service">
-                <button>Photography</button>
+                <div class="card">
+                    <img src="./images/Photography.JPG" alt="a photo" class="service">
+                    <div class="card-container">
+                        <h3>Photography</h3>
+                        <button>Learn more</button>
+                    </div>
+                </div>
             </div>
             <div>
-                <img src="./images/videography.jpg" alt="a camera" class="service">
-                <button>videography</button>
+                <div class="card">
+                    <img src="./images/videography.jpg" alt="a camera" class="service">
+                    <div class="card-container">
+                        <h3>Videography</h3>
+                        <p>I don't have any of my work for this on display yet but it will surely come true</p>
+                        <button>Coming soon!!</button>
+                    </div>
+                </div>
             </div>
+        </div>
         </div>
         <footer>
             <div class="foot">
